--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+  
+<link rel="stylesheet" type="text/css" href="style.css">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport"
