--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   
 <link rel="stylesheet" type="text/css" href="style.css">
 
+<div id="banner"></div>
+    
 <head>
   <meta charset="utf-8">
   <meta name="viewport"
