--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   
 <link rel="stylesheet" type="text/css" href="style.css">
+<link href='https://fonts.googleapis.com/css?family=Bitter' rel='stylesheet'>
 
 <div id="banner"></div>
     
@@ -13,7 +14,7 @@
   <title>Hello World!</title>
 </head>
   
-  <h1>CSS-Test 5</h1>
+  <h1>CSS-Test 6</h1>
 
 <body>
 Hello World!
