--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <link href='https://fonts.googleapis.com/css?family=Bitter' rel='stylesheet'>
 
-<div id="banner"></div>
+<div id="banner">
+  <img src="./img/cropped-hurricane-banner_00.jpg" alt="banner" />
+  <div id="bannerText">
+    Website Name
+  </div>
+</div>
     
 <head>
   <meta charset="utf-8">
@@ -14,7 +19,7 @@
   <title>Hello World!</title>
 </head>
   
-  <h1>CSS-Test 10</h1>
+  <h1>CSS-Test 11</h1>
 
 <body>
 Hello World!
