--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link href='https://fonts.googleapis.com/css?family=Bitter' rel='stylesheet'>
 
 <div id="banner">
-  <div id="bannerText">
+  <div id="bannertext">
     Website Name 2
   </div>
 </div>
@@ -18,7 +18,7 @@
   <title>Hello World!</title>
 </head>
   
-  <h1>CSS-Test 12</h1>
+  <h1>CSS-Test 13</h1>
 
 <body>
 Hello World!
