--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link href='https://fonts.googleapis.com/css?family=Bitter' rel='stylesheet'>
 
 <div id="banner">
-  <div id="bannertext">
+  <div id="bannerText">
     Website Name 4
   </div>
 </div>
