--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <link href='https://fonts.googleapis.com/css?family=Bitter' rel='stylesheet'>
 
-<div id="banner">
-  <div id="bannerText">
-    Website Name 4
-  </div>
+<div class="banner">
+  <div class="bg"></div>
+    Website Name 5
 </div>
     
 <head>
