--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <link href='https://fonts.googleapis.com/css?family=Bitter' rel='stylesheet'>
 
-<div class="banner">
-  <div class="bg"></div>
-    Website Name 6
-</div>
-    
+<!-- Header Navigation Menu -->
+<header>
+  <div id="top-header">
+    <nav>
+          <div id="menu">
+            <ul>
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">Research</a></li>
+                <li><a href="#">Leadership</a></li>
+                <li><a href="#">Resources</a></li>
+                <li><a href="#">CV</a></li>
+            </ul>
+          </div> 
+        </nav>
+  </div>
+</header>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport"
