--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
           </div> 
         </nav>
   </div>
+  <div id="header-image-menu"> 
+    <img src="./img/cropped-hurricane-banner_00.jpg"> 
+        <h2 id = "image-text"> 
+           Website Title
+        </h2> 
+  </div>
 </header>
 
 <head>
