--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div id="header-image-menu"> 
     <img src="./img/cropped-hurricane-banner_00.jpg"> 
         <h2 id = "image-text"> 
-           Website Title
+           Diamilet (Diamy) Perez-Betancourt
         </h2> 
   </div>
 </header>
