--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 <!-- Header Navigation Menu -->
 <header>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <div id="top-header">
     <nav>
           <div id="menu">
