--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <a href="#" class="active">Home</a>
     <a href="#">Research</a>
     <a href="#">Leadership</a>
-    <a href="#">CV</a
+    <a href="#">CV</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
 </div>  
       
 </div>
@@ -27,8 +30,10 @@
         </h2> 
 </div>
 
-Hello World!
-
+<div>
+  Hello World!
+</div>
+  
 <script>
 function myFunction() {
   var x = document.getElementById("myTopnav");
