--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport"
      content="width=device-width, initial-scale=1, user-scalable=yes">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Hello World!</title>
 </head>
   
