--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         </h2> 
 </div>
 
-<p class="aligncenter" >
+<div id="aligncenter" >
   <img src="./img/IMG_2322.jpg" width=250px max-width=100%  height=auto> 
-</p>
+</div>
   
   <p> Hi, I’m Diamy! Welcome to my webpage. </p>
 
