--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </div>
 
 <div id="aligncenter" >
-  <img src="./img/IMG_2322.jpg"> 
+  <img src="./img/IMG_2322.jpg" width=250px max-width=100%  height=auto> 
 </div>
   
   <p> Hi, I’m Diamy! Welcome to my webpage. </p>
