--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </h2> 
 </div>
 
-<div id="aligncenter" >
+<div id="align-center" >
   <img src="./img/IMG_2322.jpg" width=250px max-width=100%  height=auto> 
 </div>
   
