--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
         </h2> 
 </div>
 
-<div id="align-center" >
-  <img src="./img/IMG_2322.jpg" width=250px max-width=100%  height=auto> 
-</div>
+ <img src="./img/IMG_2322.jpg" class="centered" width=250px max-width=100%  height=auto> 
+
   
   <p> Hi, I’m Diamy! Welcome to my webpage. </p>
 
