--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
 </div>  
       
 </div>
-  <div id="header-image-menu"> 
+<div id="header-image-menu"> 
     <img src="./img/cropped-hurricane-banner_00.jpg"> 
         <h2 id = "image-text"> 
            Diamilet (Diamy) Pérez-Betancourt
         </h2> 
 </div>
 
- <img src="./img/IMG_2322.jpg" class="centered" width=250px max-width=100%  height=auto> 
+<div class="container">
+  <img src="./img/IMG_2322.jpg" class="centered" width=250px max-width=100%  height=auto> 
+</div>
 
   
   <p> Hi, I’m Diamy! Welcome to my webpage. </p>
