--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
         </h2> 
 </div>
   <p></p>
-<div class="container">
+<p class="container">
   <img src="./img/IMG_2322.jpg" class="centered" width=220px max-width=100%  height=auto> 
-</div>
+  LinkedIn |
+</p>
 
   
   <p> Hi, I’m Diamy! Welcome to my webpage. </p>
