--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         </h2> 
 </div>
   <p></p>
-<p class="container">
+<div class="container">
   <img src="./img/IMG_2322.jpg" class="centered" width=220px max-width=100%  height=auto> 
-  LinkedIn |
-</p>
+</div>
+  <p>   LinkedIn </p>
 
   
   <p> Hi, I’m Diamy! Welcome to my webpage. </p>
