--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="container">
   <img src="./img/IMG_2322.jpg" class="centered" width=220px max-width=100%  height=auto> 
 </div>
-  <p>   LinkedIn </p>
+  <p class="centered">   LinkedIn </p>
 
   
   <p> Hi, I’m Diamy! Welcome to my webpage. </p>
