--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Hello World!</title>
+  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </head>
   
 <!-- Header Navigation Menu -->
@@ -34,7 +35,7 @@
 <div class="container">
   <img src="./img/IMG_2322.jpg" class="centered" width=220px max-width=100%  height=auto> 
 </div>
-  <p class="centered">   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script> </p>
+  <p class="centered"> <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="diamilet-perez-betancourt-81646862"><a class="LI-simple-link" href='https://pr.linkedin.com/in/diamilet-perez-betancourt-81646862?trk=profile-badge'>Diamilet Perez-Betancourt</a></div>   </p>
 
   
   <p> Hi, I’m Diamy! Welcome to my webpage. </p>
