--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
   <img src="./img/IMG_2322.jpg" class="centered" width=220px max-width=100%  height=auto> 
 </div>
 
-<p class="centered"> <img src="https://img.shields.io/static/v1?label=&message=LinkedIn&color=0077B5&style=flat-square&logo=linkedin" href="www.linkedin.com/in/diamilet-perez-betancourt-81646862">
+<p class="centered"> 
+  <a href="www.linkedin.com/in/diamilet-perez-betancourt-81646862" target="_blank"> 
+     <img src="https://img.shields.io/static/v1?label=&message=LinkedIn&color=0077B5&style=flat-    square&logo=linkedin" >
+  </a>
 </p>
 
   
