--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </div>
 
 <p class="centered"> 
-  <a href="www.linkedin.com/in/diamilet-perez-betancourt-81646862" target="_blank"> 
+  <a href="http://www.linkedin.com/in/diamilet-perez-betancourt-81646862" target="_blank"> 
      <img src="https://img.shields.io/static/v1?label=&message=LinkedIn&color=0077B5&style=flat-    square&logo=linkedin" >
   </a>
 </p>
