--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <p class="centered"> 
   <a href="http://www.linkedin.com/in/diamilet-perez-betancourt-81646862" target="_blank"> 
-     <img src="https://img.shields.io/static/v1?label=&message=LinkedIn&color=0077B5&style=flat-    square&logo=linkedin" >
+     <img src="https://img.shields.io/badge/LinkedIn-blue?style=flat&logo=linkedin&labelColor=blue" >
   </a>
 </p>
 
