--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div id="header-image-menu"> 
     <img src="./img/cropped-hurricane-banner_00.jpg"> 
         <h2 id = "image-text"> 
-           Diamilet (Diamy) Pérez-Betancourt
+           Diamilet (Diamy) Pérez-Betancourt, PhD
         </h2> 
 </div>
   <p></p>
