--- a/index.html
+++ b/index.html
@@ -46,7 +46,13 @@
 
 <p>I'm a Postdoctoral Associate at the Extreme Events Institute's International Hurricane Research Center at Florida International University. In 2019, I received my Ph.D. degree in Atmospheric Science from the Program in Atmospheres, Oceans, and Climate at the Massachusetts Institute of Technology. At MIT, I worked with Prof. Kerry Emanuel on the formation and maintenance of tropical cyclone - or hurricane - rain bands. My primary focus is to better understand the physics of tropical cyclones, which are dangerous storms that annually affect many people around the world. I was born and raised in the island of Puerto Rico, where I experienced the threat of tropical cyclones at an early age. I decided to study them with the aim of helping vulnerable communities achieve better preparedness. Before graduate school, I earned my B.S. in Theoretical Physics from the University of Puerto Rico at Mayagüez.  </p>
 <div class="container">
-   <div class="left-column"> <img src="./img/IMG_2322.jpg" class="centered" width=220px max-width=100%  height=auto>  </div> 
+   <div class="left-column"> <img src="./img/IMG_2322.jpg" class="centered" width=220px max-width=100%  height=auto>  
+  <p class="centered"> 
+  <a href="http://www.linkedin.com/in/diamilet-perez-betancourt-81646862" target="_blank"> 
+     <img src="https://img.shields.io/badge/LinkedIn-blue?style=flat&logo=linkedin&labelColor=blue" >
+  </a>
+</p>
+  </div> 
    <div class="right-column"><p> Hi, I’m Diamy! Welcome to my webpage. </p>
      <p> I'm a Postdoctoral Associate at the Extreme Events Institute's International Hurricane Research Center at Florida International University. In 2019, I received my Ph.D. degree in Atmospheric Science from the Program in Atmospheres, Oceans, </p></div> 
 </div>
