--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
            <img src="https://img.shields.io/badge/LinkedIn-blue?style=flat&logo=linkedin&labelColor=blue" >
         </a>
       </p>
+      <p>
+        she/her
+      </p>
     </div> 
     <div class="right-column">
       <p> Hi, I’m Diamy! Welcome to my webpage. </p> 
