--- a/index.html
+++ b/index.html
@@ -34,12 +34,9 @@
 <div class="container">
     <div class="left-column"> <img src="./img/IMG_2322.jpg" class="centered" width=220px max-width=100%  height=auto>  
       <p class="centered"> 
-        <a href="http://www.linkedin.com/in/diamilet-perez-betancourt-81646862" target="_blank"> 
+        she/her <a href="http://www.linkedin.com/in/diamilet-perez-betancourt-81646862" target="_blank"> 
            <img src="https://img.shields.io/badge/LinkedIn-blue?style=flat&logo=linkedin&labelColor=blue" >
         </a>
-      </p>
-      <p>
-        she/her
       </p>
     </div> 
     <div class="right-column">
