--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="http://www.linkedin.com/in/diamilet-perez-betancourt-81646862" target="_blank"> 
            <img src="https://img.shields.io/badge/LinkedIn-blue?style=flat&logo=linkedin&labelColor=blue" >
         </a>
-        <br/> she/her 
+        <br/> Pronouns: she/her
         <br/> Dee-AH-mee
       </p>
     </div> 
