--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <a href="http://www.linkedin.com/in/diamilet-perez-betancourt-81646862" target="_blank"> 
            <img src="https://img.shields.io/badge/LinkedIn-blue?style=flat&logo=linkedin&labelColor=blue" >
         </a>
-        <br/> Pronouns: she/her
-        <br/> Dee-AH-mee
+        <br/> Dee-a-mee-LET (Dee-A-mee) PE-res Be-tan-COORT
+        <br/> she/her/hers
       </p>
     </div> 
     <div class="right-column">
