--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
         <a href="http://www.linkedin.com/in/diamilet-perez-betancourt-81646862" target="_blank"> 
            <img src="https://img.shields.io/badge/LinkedIn-blue?style=flat&logo=linkedin&labelColor=blue" >
         </a>
+        <a href="https://www.researchgate.net/profile/Diamilet_Perez-Betancourt" target="_blank"> 
+           <img src="https://img.shields.io/badge/Research%20Gate-lightgray?style=flat&logo=researchgate&labelColor=lightgray" >
+        </a>
         <br/> Dee-a-mee-LET (Dee-A-mee) PE-res Be-tan-COORT
-        <br/> she/her/hers
+        <br/> [she/her/hers]
       </p>
     </div> 
     <div class="right-column">
