--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
            <img src="https://img.shields.io/badge/LinkedIn-blue?style=flat&logo=linkedin&labelColor=blue" >
         </a>
         <a href="https://www.researchgate.net/profile/Diamilet_Perez-Betancourt" target="_blank"> 
-           <img src="https://img.shields.io/badge/Research%20Gate-lightgray?style=flat&logo=researchgate&labelColor=lightgray" >
+           <img src="https://img.shields.io/badge/Research%20Gate-gray?style=flat&logo=researchgate&labelColor=gray" >
         </a>
         <br/> Dee-a-mee-LET (Dee-A-mee) PE-res Be-tan-COORT
         <br/> [she/her/hers]
