--- a/index.html
+++ b/index.html
@@ -34,12 +34,8 @@
 <div class="container">
     <div class="left-column"> <img src="./img/IMG_2322.jpg" class="centered" width=220px max-width=100%  height=auto>  
       <p class="centered"> 
-        <a href="http://www.linkedin.com/in/diamilet-perez-betancourt-81646862" target="_blank"> 
-           <img src="https://img.shields.io/badge/LinkedIn-blue?style=flat&logo=linkedin&labelColor=blue" >
-        </a>
-        <a href="https://www.researchgate.net/profile/Diamilet_Perez-Betancourt" target="_blank"> 
-           <img src="https://img.shields.io/badge/Research%20Gate-gray?style=flat&logo=researchgate&labelColor=gray" >
-        </a>
+        <a href="http://www.linkedin.com/in/diamilet-perez-betancourt-81646862" target="_blank"><img src="https://img.shields.io/badge/LinkedIn-blue?style=flat&logo=linkedin&labelColor=blue" ></a>
+        <a href="https://www.researchgate.net/profile/Diamilet_Perez-Betancourt" target="_blank"><img src="https://img.shields.io/badge/Research%20Gate-gray?style=flat&logo=researchgate&labelColor=gray" ></a>
         <br/> Dee-a-mee-LET (Dee-A-mee) PE-res Be-tan-COORT
         <br/> [she/her/hers]
       </p>
