--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
       <p> Hi, I’m Diamy! Welcome to my webpage. </p> 
       <p>I'm a Postdoctoral Associate at the Extreme Events Institute's International Hurricane Research Center at Florida International University. In 2019, I received my Ph.D. degree in Atmospheric Science from the Program in Atmospheres, Oceans, and Climate at the Massachusetts Institute of Technology. At MIT, I worked with Prof. Kerry Emanuel on the formation and maintenance of tropical cyclone - or hurricane - rain bands. My primary focus is to better understand the physics of tropical cyclones, which are dangerous storms that annually affect many people around the world. I was born and raised in the island of Puerto Rico, where I experienced the threat of tropical cyclones at an early age. I decided to study them with the aim of helping vulnerable communities achieve better preparedness. Before graduate school, I earned my B.S. in Theoretical Physics from the University of Puerto Rico at Mayagüez.  </p>
       <p> <b> Research Interests: </b></p>
+      <ul>
+          <li>Tropical Meteorology</li>
+          <li>Tropical Cyclones (Hurricanes)</li>
+          <li>Diurnal Cycle of Convection</li>
+          <li>Atmospheric Waves and Vortices</li>
+          <li>Hurricane and Climate Change</li>
+      </ul>
     </div> 
 </div>
   
