--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <p class="centered"> 
         <a href="http://www.linkedin.com/in/diamilet-perez-betancourt-81646862" target="_blank"><img src="https://img.shields.io/badge/LinkedIn-blue?style=flat&logo=linkedin&labelColor=blue" ></a>
         <a href="https://www.researchgate.net/profile/Diamilet_Perez-Betancourt" target="_blank"><img src="https://img.shields.io/badge/Research%20Gate-gray?style=flat&logo=researchgate&labelColor=gray" ></a>
-        <a href="" target="_blank"><img scr="https://img.shields.io/badge/Github-gray?style=flat&logo=github&labelColor=gray" ></a>
+        <a href="https://github.com/diamilet" target="_blank"><img scr="https://img.shields.io/badge/Github-gray?style=flat&logo=github&labelColor=gray" ></a>
         <br/> Dee-a-mee-LET (Dee-A-mee) PE-res Be-tan-COORT
         <br/> [she/her/hers]
       </p>
