--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <li>Tropical Cyclones (Hurricanes)</li>
           <li>Diurnal Cycle of Convection</li>
           <li>Atmospheric Waves and Vortices</li>
-          <li>Hurricane and Climate Change</li>
+          <li>Hurricanes and Climate Change</li>
       </ul>
     </div> 
 </div>
