--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div> 
 </div>
   
-  <div class="footer"> </br> </div>
+  <div class="footer"> Test </div>
   
 <script>
 function myFunction() {
