--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
     </div> 
 </div>
   
-  <div class="footer"> Test </div>
+  <footer> 
+    <div id ="footer-content">
+      <p>Test</p>
+    </div>
+  </footer>
   
 <script>
 function myFunction() {
