--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
     </div> 
 </div>
   
+<footer>
+  <div id="footer-content">
+    <p>Test </p>
+  </div>
+</footer>
   
 <script>
 function myFunction() {
