--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 </div>
 
 <div class="container">
+  <div class="clearfix">
     <div class="left-column"> <img src="./img/IMG_2322.jpg" class="centered" width=220px max-width=100%  height=auto>  
       <p class="centered"> 
         <a href="http://www.linkedin.com/in/diamilet-perez-betancourt-81646862" target="_blank"><img src="https://img.shields.io/badge/LinkedIn-blue?style=flat&logo=linkedin&labelColor=blue" ></a>
@@ -54,6 +55,7 @@
           <li>Hurricanes and Climate Change</li>
       </ul>
     </div> 
+    </div>
 </div>
   
 <footer>
