--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   
 <footer>
   <div id="footer-content">
-    <a href="javascript:void(0);" class="icon" onclick="myFunction2()">Last Updated</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction2()">
   </div>
 </footer>
   
