--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ function myFunction() {
 
   <script>
     function myFunction2() {
-  var x = new Date(document.lastModified);
-  document.getElementById("demo").innerHTML = x;
+  var y = new Date(document.lastModified);
+  document.getElementById("demo").innerHTML = y;
 }
  </script>   
   
