--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   
 <footer>
   <div id="footer-content">
-    <a href="javascript:void(0);" class="icon" onload="myFunction2()">
+    <p id="date"><a href="javascript:void(0);" class="icon" onload="myFunction2()"></p>
   </div>
 </footer>
   
@@ -78,7 +78,7 @@ function myFunction() {
   <script>
     function myFunction2() {
   var y = new Date(document.lastModified);
-  document.getElementById("demo").innerHTML = y;
+  document.getElementById("date").innerHTML = y;
 }
  </script>   
   
