--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
   
 <!-- Header Navigation Menu -->
-<body>
+<body onload="myFunction2()>
 
 <div class="topnav" id="myTopnav">
     <a href="#" class="active">Home</a>
@@ -60,7 +60,7 @@
   
 <footer>
   <div id="footer-content">
-    <p id="date"><a href="javascript:void(0);" class="icon" onload="myFunction2()"></p>
+    <p id="date"></p>
   </div>
 </footer>
   
