--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
 </div>
 
-<p id="date"></p>
+<p style="color:blue" id="date"></p>
 <footer>
   <div id="footer-content">
     <p id="date"></p>
