--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
   
 <!-- Header Navigation Menu -->
-<body onload="myFunction2()>
+<body>
 
 <div class="topnav" id="myTopnav">
     <a href="#" class="active">Home</a>
@@ -61,7 +61,7 @@
 <p style="color:blue" id="date"></p>
 <footer>
   <div id="footer-content">
-    <p id="date"></p>
+    <p> </p>
   </div>
 </footer>
   
@@ -76,12 +76,6 @@ function myFunction() {
 }
 </script>
 
-  <script>
-    function myFunction2() {
-  var y = new Date(document.lastModified);
-  document.getElementById("date").innerHTML = y;
-}
- </script>   
   
 </body>
 </html>
