--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="container">
   <div class="clearfix">
     <div class="left-column"> <img src="./img/IMG_2322.jpg" class="centered" width=220px max-width=100%  height=auto>  
-      <p class="centered"> 
+      <p class="centered" style="font-size: 13px"> 
         <a href="http://www.linkedin.com/in/diamilet-perez-betancourt-81646862" target="_blank"><img src="https://img.shields.io/badge/LinkedIn-blue?style=flat&logo=linkedin&labelColor=blue" ></a>
         <a href="https://www.researchgate.net/profile/Diamilet_Perez-Betancourt" target="_blank"><img src="https://img.shields.io/badge/Research%20Gate-gray?style=flat&logo=researchgate&labelColor=gray" ></a>
         <a href="https://github.com/diamilet" target="_blank"><img src="https://img.shields.io/badge/Github-gray?style=flat&logo=github&labelColor=gray" ></a>
