--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <br/> <b>Name pronunciation:</b> Dee-a-mee-LET (Dee-A-mee) PE-res Be-tan-COORT
         <br/> <b>Pronouns:</b> she/her/hers
         <br/>
-        <a style="padding-top:2px" href="http://www.linkedin.com/in/diamilet-perez-betancourt-81646862" target="_blank"><img src="https://img.shields.io/badge/LinkedIn-blue?style=flat&logo=linkedin&labelColor=blue" ></a>
-        <a style="padding-top:2px" href="https://www.researchgate.net/profile/Diamilet_Perez-Betancourt" target="_blank"><img src="https://img.shields.io/badge/Research%20Gate-gray?style=flat&logo=researchgate&labelColor=gray" ></a>
-        <a style="padding-top:2px" href="https://github.com/diamilet" target="_blank"><img src="https://img.shields.io/badge/Github-gray?style=flat&logo=github&labelColor=gray" ></a>
+        <a href="http://www.linkedin.com/in/diamilet-perez-betancourt-81646862" target="_blank"><img style="padding-top:2px" src="https://img.shields.io/badge/LinkedIn-blue?style=flat&logo=linkedin&labelColor=blue" ></a>
+        <a href="https://www.researchgate.net/profile/Diamilet_Perez-Betancourt" target="_blank"><img style="padding-top:2px" src="https://img.shields.io/badge/Research%20Gate-gray?style=flat&logo=researchgate&labelColor=gray" ></a>
+        <a href="https://github.com/diamilet" target="_blank"><img style="padding-top:2px" src="https://img.shields.io/badge/Github-gray?style=flat&logo=github&labelColor=gray" ></a>
       </p>
     </div> 
     <div class="right-column">
