--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
 <div class="container">
   <div class="clearfix">
-    <div class="left-column"> <img src="./img/IMG_2322.jpg" class="centered" width=220px max-width=100%  height=auto>  
+    <div class="left-column"> <img src="./img/IMG_2322.jpg" class="centered" width=220px max-width=100%  height=auto> 
+      <h3>Diamilet (Diamy) Pérez-Betancourt, PhD</h3>
       <p class="centered" style="font-size: 14px"> 
-      <h3><b>Diamilet (Diamy) Pérez-Betancourt, PhD</b></h3>
         <br/> <i> Atmospheric Scientist </i>
         <br/> <b>Name pronunciation:</b> Dee-a-mee-LET (Dee-A-mee) PE-res Be-tan-COORT
         <br/> <b>Pronouns:</b> she/her/hers
