--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
   <div class="clearfix">
     <div class="left-column"> <img src="./img/IMG_2322.jpg" class="centered" width=220px max-width=100%  height=auto> 
       <h3>Diamilet (Diamy) Pérez-Betancourt, PhD</h3>
-      <p class="centered withmargin" style="font-size: 14px"> 
+      <p class="centered" style="font-size: 14px"> 
          <i> Atmospheric Scientist </i>
         <br/> <b>Name pronunciation:</b> Dee-a-mee-LET (Dee-A-mee) PE-res Be-tan-COORT
         <br/> <b>Pronouns:</b> she/her/hers
         <br/> <b>Email:</b> <a style="color:black" href="mailto: diamilet@gmail.com" target="_blank"> diamilet at gmail dot com</a>
         <br/>
-        <a href="http://www.linkedin.com/in/diamilet-perez-betancourt-81646862" target="_blank"><img style="padding-top:3px" src="https://img.shields.io/badge/LinkedIn-blue?style=flat&logo=linkedin&labelColor=blue" ></a>
-        <a href="https://www.researchgate.net/profile/Diamilet_Perez-Betancourt" target="_blank"><img style="padding-top:3px" src="https://img.shields.io/badge/Research%20Gate-gray?style=flat&logo=researchgate&labelColor=gray" ></a>
-        <a href="https://github.com/diamilet" target="_blank"><img style="padding-top:3px" src="https://img.shields.io/badge/Github-gray?style=flat&logo=github&labelColor=gray" ></a>
+        <a href="http://www.linkedin.com/in/diamilet-perez-betancourt-81646862" target="_blank"><img style="padding-top:4px" src="https://img.shields.io/badge/LinkedIn-blue?style=flat&logo=linkedin&labelColor=blue" ></a>
+        <a href="https://www.researchgate.net/profile/Diamilet_Perez-Betancourt" target="_blank"><img style="padding-top:4px" src="https://img.shields.io/badge/Research%20Gate-gray?style=flat&logo=researchgate&labelColor=gray" ></a>
+        <a href="https://github.com/diamilet" target="_blank"><img style="padding-top:4px" src="https://img.shields.io/badge/Github-gray?style=flat&logo=github&labelColor=gray" ></a>
       </p>
     </div> 
     <div class="right-column">
