--- a/research.html
+++ b/research.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport"
+     content="width=device-width, initial-scale=1, user-scalable=yes">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>Diamilet (Diamy) Perez-Betancourt, PhD</title>
+</head>
+  
+<!-- Header Navigation Menu -->
+<body>
+
+<div class="topnav" id="myTopnav">
+    <a href="#">Home</a>
+    <a href="#research" class="active">Research</a>
+    <a href="#">Leadership</a>
+    <a href="#">CV</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>  
+      
+</div>
+
+<div class="container">
+  <div class="clearfix">
+    <div class="left-column">
+    </div> 
+    <div class="right-column">
+    </div> 
+    </div>
+</div>
+
+<footer>
+  <div id="footer-content">
+    <p> </p>
+  </div>
+</footer>
+  
+<script>
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script>
+
+  
+</body>
+</html>
