--- a/research.html
+++ b/research.html
@@ -14,8 +14,8 @@
 <body>
 
 <div class="topnav" id="myTopnav">
-    <a href="#">Home</a>
-    <a href="#research" class="active">Research</a>
+    <a href="index.html">Home</a>
+    <a href="research.html" class="active">Research</a>
     <a href="#">Leadership</a>
     <a href="#">CV</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
