--- a/research.html
+++ b/research.html
@@ -15,7 +15,7 @@
 
 <div class="topnav" id="myTopnav">
     <a href="index.html">Home</a>
-    <a href="research.html" class="active">Research</a>
+    <a href="#" class="active">Research</a>
     <a href="#">Leadership</a>
     <a href="#">CV</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
