--- a/research.html
+++ b/research.html
@@ -24,10 +24,16 @@
 </div>  
       
   <h1> Research </h1>
+  
+  <div class="page title container">
+    <h1> Tropical Cyclone Rainbands </h1>
+  </div>
 
 <div class="container">
   <div class="clearfix">
     <div class="left-column">
+       <p>
+      </p>
     </div> 
     <div class="right-column">
     </div> 
