--- a/research.html
+++ b/research.html
@@ -25,7 +25,7 @@
       
   <h1> Research </h1>
   
-  <div class="page title container">
+  <div class="page-title-container">
     <h1> Tropical Cyclone Rainbands </h1>
   </div>
 
