--- a/research.html
+++ b/research.html
@@ -25,8 +25,8 @@
       
   <h1> Research </h1>
   
-  <div class="page-title-container">
-    <h1> Tropical Cyclone Rainbands </h1>
+  <div class="section-title">
+    Tropical Cyclone Rainbands 
   </div>
 
 <div class="container">
