--- a/research.html
+++ b/research.html
@@ -31,9 +31,7 @@
 
 <div class="container">
   <div class="clearfix">
-    <div class="left-column">
-       <p>
-      </p>
+    <div class="left-column"><img src="./img/hurricane_satradar_SAM_simulation.png" class="centered" width=220px max-width=100%  height=auto>
     </div> 
     <div class="right-column">
     </div> 
