--- a/research.html
+++ b/research.html
@@ -34,6 +34,12 @@
     <div class="left-column"><img src="./img/hurricane_satradar_SAM_simulation.png" class="centered" width=300px max-width=100%  height=auto>
     </div> 
     <div class="right-column">
+      <p>
+      Spiral bands are one of the most prominent features of tropical cyclones (TCs, see Figure 1). These regions of clouds and rainfall are often the source of major TC hazards, such as inland flooding, mudslides, and tornadoes. Since the advent of radar technology, numerous ideas have been proposed to explain the existence of TC spiral bands. Previous hypotheses include the manifestation of atmospheric waves emanating from the TC inner core, boundary layer instabilities, and the interaction between surface cold pools and low-level vertical wind shear. Despite much effort, no consensus has yet been reached on the underlying physical mechanism responsible for TC bands.   
+      </p>
+      <p>
+      My Ph.D. thesis approached this problem by examining the formation of TC spiral bands in a set of idealized three-dimensional simulations from the System for Atmospheric Modeling. The simulations were run with doubly-periodic horizontal boundaries, fixed sea surface temperature (301K), interactive surface fluxes, no background mean flow, and a constant rotation rate corresponding to latitude 15N. We find that, in simulations with full moist physics and interactive radiative fluxes, spiral bands are consistently collocated with surface cold pools and aligned normal to the low-level wind shear, similar to tropical squall-lines. However, convection still organizes into spiral bands in simulations in which surface cold pools are suppressed (see Figure 2). Non-rotating experiments with imposed background wind shear taken from a TC simulation suggest that, in the absence of surface cold pools, vortex dynamics are necessary for convection to align into spiral bands.  
+      </p>
     </div> 
     </div>
 </div>
