--- a/research.html
+++ b/research.html
@@ -40,6 +40,9 @@
       <p>
       My Ph.D. thesis approached this problem by examining the formation of TC spiral bands in a set of idealized three-dimensional simulations from the System for Atmospheric Modeling. The simulations were run with doubly-periodic horizontal boundaries, fixed sea surface temperature (301K), interactive surface fluxes, no background mean flow, and a constant rotation rate corresponding to latitude 15N. We find that, in simulations with full moist physics and interactive radiative fluxes, spiral bands are consistently collocated with surface cold pools and aligned normal to the low-level wind shear, similar to tropical squall-lines. However, convection still organizes into spiral bands in simulations in which surface cold pools are suppressed (see Figure 2). Non-rotating experiments with imposed background wind shear taken from a TC simulation suggest that, in the absence of surface cold pools, vortex dynamics are necessary for convection to align into spiral bands.  
       </p>
+      <p>
+        <b>Dissertation:</b> <a style="color:black" href="https://dspace.mit.edu/handle/1721.1/121760" target="_blank">Formation and maintenance of tropical cyclone spiral bands in idealized numerical simulations</a>
+      </p>
     </div> 
     </div>
 </div>
