--- a/research.html
+++ b/research.html
@@ -32,12 +32,18 @@
 <div class="container">
   <div class="clearfix">
     <div class="left-column"><img src="./img/hurricane_satradar_SAM_simulation.png" class="centered" width=280px max-width=100%  height=auto>
+      </br>
       <p class="centered no-margin" style="font-size: 14px">
         <i><b>Figure 1.</b> Main components of the mature TC structure in simulated satellite (left) and radar (right) data.</i>
       </p>
       </br>
       </br>
       <img src="./img/bubble_noevap_polar_surfTHTVTPWa_wRMW_d23h00m00_d23h05m00_1200sqzoom.png" class="centered" width=280px max-width=100%  height=auto>
+      </br>
+      <p class="centered no-margin" style="font-size: 14px">
+        <i><b>Figure 2.</b> Near-surface virtual potential temperature (colored) and total precipitable water (overlaid) asymmetries on day 23, hour 4, of a TC simulation with no re-evaporation of rainfall. Dashed concentric circles are drawn every 100 km from the TC center.</i>
+      </p>
+  
     </div> 
     <div class="right-column">
       <p>
