--- a/research.html
+++ b/research.html
@@ -55,6 +55,12 @@
       <p>
         <b>Dissertation:</b> <a style="color:black" href="https://dspace.mit.edu/handle/1721.1/121760" target="_blank">Formation and maintenance of tropical cyclone spiral bands in idealized numerical simulations</a>
       </p>
+      <p>
+        <b>Publications:</b> 
+        <ul>
+          <li><b>Perez-Betancourt, D.</b> and K. A. Emanuel, 2020. Spiral bands in dry tropical cyclones. J. Atmos. Sci. <i>In preparation.</i></li>
+      </ul>
+      </p>
     </div> 
     </div>
 </div>
