--- a/research.html
+++ b/research.html
@@ -61,6 +61,12 @@
           <li><b>Perez-Betancourt, D.</b> and K. A. Emanuel, 2020. Spiral bands in dry tropical cyclones. J. Atmos. Sci. <i>In preparation.</i></li>
       </ul>
       </p>
+      <p>
+        <b>Presentations:</b> 
+        <ul>
+          <li><a style="color:black" href="https://eapsweb.mit.edu/formation-and-maintenance-tropical-cyclone-spiral-bands-idealized-numerical-simulations" target="_blank">MIT-PAOC Special Seminar, Cambridge, MA, 2018</a>       </li>
+      </ul>
+      </p>
     </div> 
     </div>
 </div>
