--- a/research.html
+++ b/research.html
@@ -64,8 +64,9 @@
       <p>
         <b>Presentations:</b> 
         <ul>
-          <li><a style="color:black" href="https://eapsweb.mit.edu/formation-and-maintenance-tropical-cyclone-spiral-bands-idealized-numerical-simulations" target="_blank">MIT-PAOC Special Seminar, Cambridge, MA, 2018</a>       </li>
-      </ul>
+          <li><a style="color:black" href="https://eapsweb.mit.edu/formation-and-maintenance-tropical-cyclone-spiral-bands-idealized-numerical-simulations" target="_blank">MIT-PAOC Special Seminar, Cambridge, MA, 2018</a></li>
+          <li>a style="color:black" href="https://ams.confex.com/ams/97Annual/webprogram/Paper314332.html" target="_blank">97th AMS Annual Meeting: Robert A. Houze, Jr. Symposium, Seattle, WA, 2017</a></li>
+    </ul>
       </p>
     </div> 
     </div>
