--- a/research.html
+++ b/research.html
@@ -63,7 +63,7 @@
       </p>
       <p>
         <b>Presentations:</b> 
-        <ul>
+        <ul style="line-height: 1.5">
           <li><a style="color:black" href="https://eapsweb.mit.edu/formation-and-maintenance-tropical-cyclone-spiral-bands-idealized-numerical-simulations" target="_blank">MIT-PAOC Special Seminar, Cambridge, MA, 2018</a></li>
           <li><a style="color:black" href="https://ams.confex.com/ams/97Annual/webprogram/Paper314332.html" target="_blank">97th AMS Annual Meeting: Robert A. Houze, Jr. Symposium, Seattle, WA, 2017</a></li>
           <li>Pauline M. Austin Centenary Celebration, Cambridge, MA, 2016 (see MIT <a style="color:black" href="https://news.mit.edu/2017/celebrating-pauline-morrow-austin-founder-of-radar-meteorology-0131" target="_blank">news</a>)</li>
