--- a/research.html
+++ b/research.html
@@ -67,7 +67,10 @@
           <li><a style="color:black" href="https://eapsweb.mit.edu/formation-and-maintenance-tropical-cyclone-spiral-bands-idealized-numerical-simulations" target="_blank">MIT-PAOC Special Seminar, Cambridge, MA, 2018</a></li>
           <li><a style="color:black" href="https://ams.confex.com/ams/97Annual/webprogram/Paper314332.html" target="_blank">97th AMS Annual Meeting: Robert A. Houze, Jr. Symposium, Seattle, WA, 2017</a></li>
           <li>Pauline M. Austin Centenary Celebration, Cambridge, MA, 2016 (see MIT <a style="color:black" href="https://news.mit.edu/2017/celebrating-pauline-morrow-austin-founder-of-radar-meteorology-0131" target="_blank">news</a>)</li>
-       </ul>
+          <li>Minorities Striving and Pursuing Higher Degrees of Success in Earth System Science's Poster Session at the National Science Foundation, Washington D.C., 2014</li>
+          <li><a style="color:black" href="https://ams.confex.com/ams/31Hurr/webprogram/Paper245178.html" target="_blank">31st AMS Conference on Hurricanes and Tropical Meteorology, San Diego, CA, 2014</a></li>
+          <li><a style="color:black" href="https://ams.confex.com/ams/94Annual/webprogram/Paper235696.html" target="_blank">94th AMS Annual Meeting: 26th Conference on Weather Analysis and Forecasting/22nd Conference on Numerical Weather Prediction, Atlanta, GA, 2014</a></li>
+      </ul>
       </p>
     </div> 
     </div>
