--- a/research.html
+++ b/research.html
@@ -76,6 +76,10 @@
     </div>
 </div>
 
+  <div class="section-title">
+    Dry Tropical Cyclone Spiral Bands 
+  </div>
+
 <footer>
   <div id="footer-content">
     <p> </p>
