--- a/research.html
+++ b/research.html
@@ -56,12 +56,6 @@
         <b>Dissertation:</b> <a style="color:black" href="https://dspace.mit.edu/handle/1721.1/121760" target="_blank">Formation and maintenance of tropical cyclone spiral bands in idealized numerical simulations</a>
       </p>
       <p>
-        <b>Publications:</b> 
-        <ul>
-          <li><b>Perez-Betancourt, D.</b> and K. A. Emanuel, 2020. Spiral bands in dry tropical cyclones. J. Atmos. Sci. <i>In preparation.</i></li>
-      </ul>
-      </p>
-      <p>
         <b>Presentations:</b> 
         <ul style="line-height: 1.5">
           <li><a style="color:black" href="https://eapsweb.mit.edu/formation-and-maintenance-tropical-cyclone-spiral-bands-idealized-numerical-simulations" target="_blank">MIT-PAOC Special Seminar, Cambridge, MA, 2018</a></li>
@@ -79,6 +73,26 @@
   <div class="section-title">
     Dry Tropical Cyclone Spiral Bands 
   </div>
+
+<div class="container">
+  <div class="clearfix">
+    <div class="left-column"><img src="./img/drybubble_4096km2_2kmres_xy_850mbwindspeedfrom2D_d10h00m00" class="centered" width=280px max-width=100%  height=auto>
+      </br>
+      <p class="centered no-margin" style="font-size: 14px">
+        <i><b>Figure 3.</b> Snapshot of 850 mb wind speed (m/s) of a dry TC simulation.</i>
+      </p>
+    </div> 
+    <div class="right-column">
+      <p>
+        Under the present climate of our planet, the atmospheric vortices known as TCs are moist phenomena driven primarily by turbulent heat transfer from the ocean surface. Using a non-hydrostatic, axisymmetric model, Mrowiec et al. (2011) showed that steady-state, TC-like vortices can develop in the absence of water vapor and phase transition. In such simulations, the base state is one of dry radiative-convective equilibrium (RCE), with dry-adiabatic lapse rates through the depth of the troposphere and a large temperature jump from the surface to the lowest model level. These dry TCs are primarily sustained by sensible heat fluxes from the surface, rather than latent heat fluxes. More recently, Cronin and Chavas (2019) showed that stable TC-like vortices can also form spontaneously in three-dimensional simulations of rotating RCE over a completely dry surface. Chapter 4 of my Ph.D. thesis examined the formation of spiral bands in similar dry TC simulations (see Figure 3). We find that these dry TCs exhibit many spiral bands in the wind and temperature fields extending far away from the inner core. Initially, these perturbations are nearly stationary and exhibit overturning circulations consistent with boundary layer instabilities. Barotropic-baroclinic instability dominates the TC structure later in the simulation, reducing the outer region to just a few spiral bands. I am working on determining the role these instabilities may have in the formation of spiral bands in moist TCs.     
+        <b>Publications:</b> 
+        <ul>
+          <li><b>Perez-Betancourt, D.</b> and K. A. Emanuel, 2020. Spiral bands in dry tropical cyclones. J. Atmos. Sci. <i>In preparation.</i></li>
+      </ul>
+      </p>
+    </div> 
+    </div>
+</div>
 
 <footer>
   <div id="footer-content">
