--- a/research.html
+++ b/research.html
@@ -76,7 +76,7 @@
 
 <div class="container">
   <div class="clearfix">
-    <div class="left-column"><img src="./img/drybubble_4096km2_2kmres_xy_850mbwindspeedfrom2D_d10h00m00" class="centered" width=280px max-width=100%  height=auto>
+    <div class="left-column"><img src="./img/drybubble_4096km2_2kmres_xy_850mbwindspeedfrom2D_d10h00m00.png" class="centered" width=280px max-width=100%  height=auto>
       </br>
       <p class="centered no-margin" style="font-size: 14px">
         <i><b>Figure 3.</b> Snapshot of 850 mb wind speed (m/s) of a dry TC simulation.</i>
