--- a/research.html
+++ b/research.html
@@ -96,6 +96,32 @@
     </div>
 </div>
 
+  <div class="section-title">
+    Tropical Cyclone Diurnal Cycle
+  </div>
+
+<div class="container">
+  <div class="clearfix">
+    <div class="left-column"><img src="./img/spectrum_TABS_z14km_r400km_2timeranges_ver2.png" class="centered" width=280px max-width=100%  height=auto>
+      </br>
+      <p class="centered no-margin" style="font-size: 14px">
+        <i><b>Figure 4.</b> Power spectral density of upper-level azimuthally averaged temperature at a radius of 400 km from the TC center (well beyond the storm core), showing a significant diurnal and semi-diurnal signal.</i>
+      </p>
+    </div> 
+    <div class="right-column">
+      <p>
+       A recent observational analysis by Dunion et al. (2014) reported significant repeating diurnal signals propagating outward at cloud-top height from tropical cyclone centers. Modeling studies suggest that the visible upper-level impacts reflect a diurnal cycle through the depth of the troposphere. In this study, the possibility of wavelike diurnal responses in tropical cyclones is characterized using 3D cloud-resolving numerical simulations with and without a diurnal cycle. Diurnal waves can only begin to propagate well beyond the storm core, and the outflow region is most receptive to near-core diurnal propagation because of its anticyclonic flow (Figure 4). The tropical cyclone structure appears particularly hostile to diurnal wave propagation during periods when the eyewall experiences a temporary breakdown similar to an eyewall replacement cycle.      
+      </p>
+     <p>   
+        <b>Publications:</b> 
+        <ul>
+          <li>O'Neill, M. E, <b>D. Perez-Betancourt</b>, and A. A. Wing, 2017: Accessible environments for diurnal-period waves in simulated tropical cyclones. J. Atmos. Sci., 74, 2489-2502, doi:10.1175/JAS-D-16-0294.1.</i></li>
+      </ul>
+      </p>
+    </div> 
+    </div>
+</div>
+
 <footer>
   <div id="footer-content">
     <p> </p>
