--- a/leadership.html
+++ b/leadership.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport"
+     content="width=device-width, initial-scale=1, user-scalable=yes">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>Diamilet (Diamy) Perez-Betancourt, PhD</title>
+</head>
+  
+<!-- Header Navigation Menu -->
+<body>
+
+<div class="topnav" id="myTopnav">
+    <a href="index.html">Home</a>
+    <a href="research.html">Research</a>
+    <a href="#" class="active">Leadership</a>
+    <a href="#">CV</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>  
+      
+  <h1> Leadership </h1>
+  
+  <h4> 2018: MIT Better World in Miami, Florida</h4>
+ 
+<div class="container">
+  <div class="clearfix">
+    <div class="left-column"><img src="" class="centered" width=280px max-width=100%  height=auto>
+    </div> 
+    <div class="right-column">
+      <p>
+      I was invited to speak at the Miami event of the MIT Campaign for a Better World, a fundraising initiative aimed at advancing the institute's research and scholarship on some of the world's biggest challenges. In front of a crowd of around 300 people, I shared what inspired me to pursue a career in hurricane research, the societal impacts of this work, and how MIT has helped advance me towards that goal. 
+      </p>
+    </div> 
+    </div>
+</div>
+
+<footer>
+  <div id="footer-content">
+    <p> </p>
+  </div>
+</footer>
+  
+<script>
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script>
+
+  
+</body>
+</html>
