--- a/research.html
+++ b/research.html
@@ -16,7 +16,7 @@
 <div class="topnav" id="myTopnav">
     <a href="index.html">Home</a>
     <a href="#" class="active">Research</a>
-    <a href="#">Leadership</a>
+    <a href="leadership.html">Leadership</a>
     <a href="#">CV</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
