--- a/leadership.html
+++ b/leadership.html
@@ -29,7 +29,7 @@
  
 <div class="container">
   <div class="clearfix">
-    <div class="left-column"><img src="" class="centered" width=280px max-width=100%  height=auto>
+    <div class="left-column"><img src="./img/IMG-20180308-WA0012.jpg" class="centered" width=280px max-width=100%  height=auto>
     </div> 
     <div class="right-column">
       <p>
