--- a/leadership.html
+++ b/leadership.html
@@ -25,7 +25,9 @@
       
   <h1> Leadership </h1>
   
-  <h4> 2018: MIT Better World in Miami, Florida</h4>
+    <div class="section-title">
+    2018: MIT Better World in Miami, Florida
+  </div>
  
 <div class="container">
   <div class="clearfix">
