--- a/leadership.html
+++ b/leadership.html
@@ -32,6 +32,8 @@
 <div class="container">
   <div class="clearfix">
     <div class="left-column"><img src="./img/IMG-20180308-WA0012.jpg" class="centered" width=280px max-width=100%  height=auto>
+       <iframe width="420" height="345" src="https://www.youtube.com/watch?v=NRLyv9JrgX4">
+        </iframe>
     </div> 
     <div class="right-column">
       <p>
