--- a/leadership.html
+++ b/leadership.html
@@ -32,8 +32,7 @@
 <div class="container">
   <div class="clearfix">
     <div class="left-column"><img src="./img/IMG-20180308-WA0012.jpg" class="centered" width=280px max-width=100%  height=auto>
-       <iframe width="420" height="345" src="https://www.youtube.com/watch?v=NRLyv9JrgX4">
-        </iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/NRLyv9JrgX4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div> 
     <div class="right-column">
       <p>
