--- a/leadership.html
+++ b/leadership.html
@@ -32,12 +32,14 @@
 <div class="container">
   <div class="clearfix">
     <div class="left-column"><img src="./img/IMG-20180308-WA0012.jpg" class="centered" width=280px max-width=100%  height=auto>
+      </br>
       <iframe width="280" height="163" src="https://www.youtube.com/embed/NRLyv9JrgX4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div> 
     <div class="right-column">
       <p>
       I was invited to speak at the Miami event of the MIT Campaign for a Better World, a fundraising initiative aimed at advancing the institute's research and scholarship on some of the world's biggest challenges. In front of a crowd of around 300 people, I shared what inspired me to pursue a career in hurricane research, the societal impacts of this work, and how MIT has helped advance me towards that goal. 
       </p>
+      <p> Click <a style="color:black" href="https://betterworld.mit.edu/miami-and-the-mit-community-of-florida-welcome-the-better-world-tour/" target="_blank">here</a> to learn more about this event. 
     </div> 
     </div>
 </div>
