--- a/leadership.html
+++ b/leadership.html
@@ -43,6 +43,11 @@
     </div> 
     </div>
 </div>
+  
+      <div class="section-title">
+    2017: Discover EAPS Extreme Weather and Climate
+  </div>
+  
 
 <footer>
   <div id="footer-content">
