--- a/leadership.html
+++ b/leadership.html
@@ -33,7 +33,7 @@
   <div class="clearfix">
     <div class="left-column"><img src="./img/IMG-20180308-WA0012.jpg" class="centered" width=280px max-width=100%  height=auto>
       </br>
-      <iframe width="280" height="163" src="https://www.youtube.com/embed/NRLyv9JrgX4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe class="centered" width="280" height="163" src="https://www.youtube.com/embed/NRLyv9JrgX4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div> 
     <div class="right-column">
       <p>
