--- a/leadership.html
+++ b/leadership.html
@@ -32,6 +32,9 @@
 <div class="container">
   <div class="clearfix">
     <div class="left-column"><img src="./img/IMG-20180308-WA0012.jpg" class="centered" width=280px max-width=100%  height=auto>
+     <p class="centered no-margin" style="font-size: 14px">
+        <i> Maria Paula Angarita </i>
+      </p>
       </br>
       <iframe class="centered" width="280" height="163" src="https://www.youtube.com/embed/NRLyv9JrgX4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div> 
