--- a/leadership.html
+++ b/leadership.html
@@ -37,12 +37,13 @@
       </p>
       </br>
       <iframe class="centered" width="280" height="163" src="https://www.youtube.com/embed/NRLyv9JrgX4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+     <p class="centered no-margin" style="font-size: 14px"> Click <a style="color:black" href="https://www.youtube.com/watch?v=NRLyv9JrgX4" target="_blank">here</a> to watch the video on Youtube. </p>
     </div> 
     <div class="right-column">
       <p>
       I was invited to speak at the Miami event of the MIT Campaign for a Better World, a fundraising initiative aimed at advancing the institute's research and scholarship on some of the world's biggest challenges. In front of a crowd of around 300 people, I shared what inspired me to pursue a career in hurricane research, the societal impacts of this work, and how MIT has helped advance me towards that goal. 
       </p>
-      <p> Click <a style="color:black" href="https://betterworld.mit.edu/miami-and-the-mit-community-of-florida-welcome-the-better-world-tour/" target="_blank">here</a> to learn more about this event. 
+      <p> Click <a style="color:black" href="https://betterworld.mit.edu/miami-and-the-mit-community-of-florida-welcome-the-better-world-tour/" target="_blank">here</a> to learn more about this event. </p>
     </div> 
     </div>
 </div>
