--- a/leadership.html
+++ b/leadership.html
@@ -52,7 +52,25 @@
     2017: Discover EAPS Extreme Weather and Climate
   </div>
   
-
+<div class="container">
+  <div class="clearfix">
+    <div class="left-column"><img src="./img/37733035866_217d06f2de_b.jpg" class="centered" width=280px max-width=100%  height=auto>
+     <p class="centered no-margin" style="font-size: 14px">
+        <i> Photo credit: MIT EAPS </i>
+      </p>
+    </div> 
+    <div class="right-column">
+      <p>
+      I served as a graduate teaching assistant for my department's freshman pre-orientation program, a 5-day exploration of the science of the Earth at MIT and at Mt. Washington in New Hampshire. We organized activities to engage incoming MIT students into learning about extreme weather, hurricanes and blizzards, and current topics of climate research.   
+      </p>
+      <p> Click <a style="color:black" href="http://twelve.mit.edu/mitcourse12/deaps-extreme-weather/" target="_blank">here</a> to learn more about this event. </p>
+    </div> 
+    </div>
+</div>
+  
+  
+  
+  
 <footer>
   <div id="footer-content">
     <p> </p>
