--- a/leadership.html
+++ b/leadership.html
@@ -54,7 +54,7 @@
   
 <div class="container">
   <div class="clearfix">
-    <div class="left-column"><img src="./img/37733035866_217d06f2de_b.jpg" class="centered" width=280px max-width=100%  height=auto>
+    <div class="left-column"><img src="./img/IMG_377330.jpg" class="centered" width=280px max-width=100%  height=auto>
      <p class="centered no-margin" style="font-size: 14px">
         <i> Photo credit: MIT EAPS </i>
       </p>
