--- a/leadership.html
+++ b/leadership.html
@@ -32,7 +32,7 @@
 <div class="container">
   <div class="clearfix">
     <div class="left-column"> </br> 
-    <img src="./img/IMG-20180308-WA0012.jpg" class="centered" width=43%  height=auto>
+    <img class="centered left-column" src="./img/IMG-20180308-WA0012.jpg">
      <p class="centered no-margin" style="font-size: 14px">
         <i> Photo credit: Maria Paula Angarita </i>
       </p>
